--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -6,7 +6,7 @@
 	<H2 ALIGN="CENTER">A Sample Form Using GET</H2>
 	<FORM ACTION="https://www.google.com.ua">
 	<CENTER>
-	First name:
+	first name:
 	<INPUT TYPE="TEXT" NAME="q" VALUE="J. Random"><BR>
 	Last name:
 	<INPUT TYPE="TEXT" NAME="lastName" VALUE="Super Hacker"><P>
