--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -8,7 +8,7 @@
 	<CENTER>
 	first name:
 	<INPUT TYPE="TEXT" NAME="q" VALUE="J. Random"><BR>
-	Last name:
+	last name:
 	<INPUT TYPE="TEXT" NAME="lastName" VALUE="Super Hacker"><P>
 	<INPUT TYPE="SUBMIT" VALUE="ClickMe">
 	</CENTER>
